// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionBookedModal — DOM snapshots test_should_match_snapshot_for_student_view 1`] = `
<DocumentFragment>
  <div
    class="session-booked-overlay"
  >
    <div
      class="session-booked-modal"
    >
      <div
        class="session-booked-content"
      >
        <div
          class="session-booked-header"
        >
          <h1
            class="session-booked-title"
          >
            ¡Tutoría reservada!
          </h1>
        </div>
        <div
          class="status-message"
        >
          <p
            class="status-text"
          >
            Tu tutoría ha sido reservada.
          </p>
        </div>
        <div
          class="cat-illustration"
        >
          <img
            alt="Happy Calico Cat"
            class="calico-cat"
            height="200"
            src="/happy-calico.png"
            width="200"
          />
        </div>
        <div
          class="thank-you-message"
        >
          <p
            class="thank-you-text"
          >
            Gracias por reservar tu tutoría.
          </p>
          <p
            class="session-details"
          >
            Nos vemos el 15 de abril de 2026 a las 10:00 a. m..
          </p>
        </div>
        <div
          class="session-info-card"
        >
          <h3
            class="session-info-title"
          >
            Detalles de tu tutoría
          </h3>
          <div
            class="session-details-list"
          >
            <div
              class="session-detail-item"
            >
              <svg
                class="lucide lucide-user detail-icon"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
              <span
                class="detail-label"
              >
                Tutor
              </span>
              <span
                class="detail-value"
              >
                Carlos Tutor
              </span>
            </div>
            <div
              class="session-detail-item"
            >
              <svg
                class="lucide lucide-book-open detail-icon"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 7v14"
                />
                <path
                  d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
                />
              </svg>
              <span
                class="detail-label"
              >
                Materia
              </span>
              <span
                class="detail-value"
              >
                Cálculo I
              </span>
            </div>
            <div
              class="session-detail-item"
            >
              <svg
                class="lucide lucide-calendar detail-icon"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2v4"
                />
                <path
                  d="M16 2v4"
                />
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="4"
                />
                <path
                  d="M3 10h18"
                />
              </svg>
              <span
                class="detail-label"
              >
                Fecha
              </span>
              <span
                class="detail-value"
              >
                15 de abril de 2026
              </span>
            </div>
            <div
              class="session-detail-item"
            >
              <svg
                class="lucide lucide-clock detail-icon"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <polyline
                  points="12 6 12 12 16 14"
                />
              </svg>
              <span
                class="detail-label"
              >
                Hora
              </span>
              <span
                class="detail-value"
              >
                10:00 a. m.
              </span>
            </div>
            <div
              class="session-detail-item"
            >
              <svg
                class="lucide lucide-map-pin detail-icon"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                />
                <circle
                  cx="12"
                  cy="10"
                  r="3"
                />
              </svg>
              <span
                class="detail-label"
              >
                Ubicación
              </span>
              <span
                class="detail-value"
              >
                Google Meet
              </span>
            </div>
          </div>
        </div>
        <div
          class="meet-link-container"
        >
          <div
            class="meet-link-header"
          >
            <svg
              class="w-5 h-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M15 10l4.553-2.276A1 1 0 0121 8.618v6.764a1 1 0 01-1.447.894L15 14M5 18h8a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v8a2 2 0 002 2z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            <span
              class="meet-link-title"
            >
              Enlace de reunión
            </span>
          </div>
          <a
            class="meet-link-button"
            href="https://meet.google.com/abc-defg-hij"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span>
              meet.google.com/abc-defg-hij
            </span>
            <svg
              class="w-4 h-4"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </a>
        </div>
        <div
          class="modal-actions"
        >
          <button
            class="close-modal-btn"
          >
            Entendido
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SessionBookedModal — DOM snapshots test_should_match_snapshot_for_tutor_view_without_optional_fields 1`] = `
<DocumentFragment>
  <div
    class="session-booked-overlay"
  >
    <div
      class="session-booked-modal"
    >
      <div
        class="session-booked-content"
      >
        <div
          class="session-booked-header"
        >
          <h1
            class="session-booked-title"
          >
            ¡Tutoría aprobada!
          </h1>
        </div>
        <div
          class="status-message"
        >
          <p
            class="status-text"
          >
            Tu tutoría ha sido aprobada.
          </p>
        </div>
        <div
          class="cat-illustration"
        >
          <img
            alt="Happy Calico Cat"
            class="calico-cat"
            height="200"
            src="/happy-calico.png"
            width="200"
          />
        </div>
        <div
          class="thank-you-message"
        >
          <p
            class="thank-you-text"
          >
            Gracias por aceptar la tutoría.
          </p>
          <p
            class="session-details"
          >
            Programada para el 15 de abril de 2026 a las 10:00 a. m..
          </p>
        </div>
        <div
          class="session-info-card"
        >
          <h3
            class="session-info-title"
          >
            Detalles de la tutoría
          </h3>
          <div
            class="session-details-list"
          >
            <div
              class="session-detail-item"
            >
              <svg
                class="lucide lucide-user detail-icon"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
              <span
                class="detail-label"
              >
                Estudiante
              </span>
              <span
                class="detail-value"
              >
                Laura Estudiante
              </span>
            </div>
            <div
              class="session-detail-item"
            >
              <svg
                class="lucide lucide-book-open detail-icon"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 7v14"
                />
                <path
                  d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
                />
              </svg>
              <span
                class="detail-label"
              >
                Materia
              </span>
              <span
                class="detail-value"
              >
                Cálculo I
              </span>
            </div>
            <div
              class="session-detail-item"
            >
              <svg
                class="lucide lucide-calendar detail-icon"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2v4"
                />
                <path
                  d="M16 2v4"
                />
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="4"
                />
                <path
                  d="M3 10h18"
                />
              </svg>
              <span
                class="detail-label"
              >
                Fecha
              </span>
              <span
                class="detail-value"
              >
                15 de abril de 2026
              </span>
            </div>
            <div
              class="session-detail-item"
            >
              <svg
                class="lucide lucide-clock detail-icon"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <polyline
                  points="12 6 12 12 16 14"
                />
              </svg>
              <span
                class="detail-label"
              >
                Hora
              </span>
              <span
                class="detail-value"
              >
                10:00 a. m.
              </span>
            </div>
          </div>
        </div>
        <div
          class="modal-actions"
        >
          <button
            class="close-modal-btn"
          >
            Entendido
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
